feat(thesis): add detailed sensor pin tables and technical documentation
- Add I2C bus sharing explanation for ESP32-S3 (BMP180 + MPU6050)
- Explain MQ-2 5V power requirement (heater voltage VH=5.0V±0.2V per datasheet)
- Add ESP32-S3 pin connection table (Tab 4.3) with MPU6050, BMP180, KY-037 details
- Add ESP32 pin connection table (Tab 4.5) with TCS34725, MQ-2, SR602, RGB LED
- Add bibliography entries: bmp180_datasheet, mq2_datasheet, tcs34725_datasheet,
  sr602_datasheet, i2c_spec_2021
- Add multirow package for table formatting
- Thesis now 87 pages (v20.7)

--- a/docs/BT/CTU_FEL_THESIS/literature.bib
+++ b/docs/BT/CTU_FEL_THESIS/literature.bib
@@ -663,6 +663,50 @@
   note         = {Accessed: 2026-01-02. Specifies accelerometer zero-g output tolerance of $\pm$80\,mg and gyroscope zero-rate output of $\pm$20\,$^{\circ}$/s, indicating the need for individual sensor calibration.}
 }
 
+@manual{bmp180_datasheet_2013,
+  author       = {{Bosch Sensortec}},
+  title        = {{BMP180} Digital Pressure Sensor Data Sheet},
+  year         = {2013},
+  organization = {Bosch Sensortec GmbH},
+  url          = {https://cdn-shop.adafruit.com/datasheets/BST-BMP180-DS000-09.pdf},
+  note         = {Accessed: 2026-01-07. I2C address 0x77; VDD range 1.8--3.6\,V; pressure range 300--1100\,hPa.}
+}
+
+@manual{mq2_datasheet_2014,
+  author       = {{Zhengzhou Winsen Electronics}},
+  title        = {{MQ-2} Semiconductor Sensor for Combustible Gas},
+  year         = {2014},
+  organization = {Zhengzhou Winsen Electronics Technology Co., Ltd.},
+  url          = {https://www.mouser.com/datasheet/2/321/605-00008-MQ-2-Datasheet-370464.pdf},
+  note         = {Accessed: 2026-01-07. Heater voltage VH = 5.0\,V $\pm$0.2\,V; heater power $\leq$900\,mW; SnO$_2$ sensing element requires continuous heating for proper operation.}
+}
+
+@manual{tcs34725_datasheet_2012,
+  author       = {{ams AG}},
+  title        = {{TCS34725} Color Light-to-Digital Converter with {IR} Filter},
+  year         = {2012},
+  organization = {ams AG},
+  url          = {https://cdn-shop.adafruit.com/datasheets/TCS34725.pdf},
+  note         = {Accessed: 2026-01-07. I2C address 0x29; VDD range 2.7--3.6\,V; includes IR blocking filter for accurate color measurement.}
+}
+
+@manual{sr602_datasheet_2018,
+  author       = {{Shenzhen Sundaking Technology}},
+  title        = {{SR602} Mini {PIR} Motion Sensor Module},
+  year         = {2018},
+  organization = {Shenzhen Sundaking Technology Co., Ltd.},
+  note         = {Operating voltage 3.3--5\,V; digital output (high/low); detection range 3--4\,m; ultra-low quiescent current $<$10\,$\mu$A.}
+}
+
+@book{i2c_spec_2021,
+  author       = {{NXP Semiconductors}},
+  title        = {{I2C}-bus Specification and User Manual, Rev.\@ 7.0},
+  year         = {2021},
+  publisher    = {NXP Semiconductors},
+  url          = {https://www.nxp.com/docs/en/user-guide/UM10204.pdf},
+  note         = {Accessed: 2026-01-07. Defines I2C multi-master bus protocol with 7-bit addressing supporting up to 128 devices on shared SDA/SCL lines.}
+}
+
 @article{osa_3dprint_iot_2025,
   author  = {Osa-Sanchez, Ainhoa and Garcia-Zapirain, Begonya},
   title   = {Real-Time Air Quality Monitoring: A Smart {IoT} System Using Low-Cost Sensors and {3-D} Printing},
